feat(root): project start script created

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "api"
   ],
   "scripts": {
+    "start": "node .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "workspaces": [
