feat(api): api v1 created

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "workspaces": [
-    "packages/server"
+    "packages/server",
+    "packages/app-v1"
   ]
 }
